# Markity

./: .gitignore  README.md  electron.html  index.html  package.json  popup.html  tsconfig.json  vite.background.config.ts  vite.config.ts  vite.content.config.ts  vite.electron-main.config.ts  vite.electron-preload.config.ts  vite.electron.config.ts  vite.tauri.config.ts
.github/workflows/: release.yml
macos/: Cargo.toml  tauri.conf.json
macos/capabilities/: default.json
macos/icons/: icon.icns
macos/src/: lib.rs  main.rs
manifests/: chrome.json  firefox.json
public/: manifest.json
scripts/: icons.ts  manifest.ts  pack-chrome.ts  pack-electron.ts  pack-firefox.ts
site/: README.md  app.js  index.html  serve.ts  styles.css
src/: vite-env.d.ts
src/electron/: bridge.tauri.ts  entry.tauri.ts  main.ts  preload.ts  renderer.css  renderer.ts
src/extension/: api.ts  background.ts  content.ts  drawer.css  drawer.ts
src/reader/: popup.css  popup.ts
src/render/: document.ts  markdown.ts  theme.ts
src/render/assets/: base.css  dark.json  light.json  patch.css  variables.css
