[package]
name = "markity"
version = "0.1.7"
description = "Markdown reader"
edition = "2021"

[lib]
name = "markity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSResponder", "NSWindow", "NSPanel", "NSSavePanel", "NSOpenPanel", "NSAlert", "NSButton", "NSImage", "NSApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSData"] }
